// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden palettes > black, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eaeaea",
        "#d7d7d7",
        "#c1c1c1",
        "#a4a4a4",
        "#848484",
        "#636363",
        "#434343",
        "#2d2d2d",
        "#1a1a1a",
        "#000000 (seed)",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#000000",
        "magnitude": "large",
        "mode": "exact",
        "slot": 950,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 8",
    "3: 1.53:1, Lc 16",
    "4: 2.01:1, Lc 29",
    "5: 2.88:1, Lc 44",
    "6: 4.31:1, Lc 59",
    "7: 6.76:1, Lc 73",
    "8: 9.25:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > blurple, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#e9ecfe",
        "#d6dcfe",
        "#bfc7fe",
        "#a0a9ff",
        "#7f86ff",
        "#635bff (seed)",
        "#4e23f3",
        "#3d14c5",
        "#2c1493",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f7e9fe",
        "#f0d6fd",
        "#e7bdfc",
        "#da99f9",
        "#c274e6",
        "#a94bd1",
        "#8d19b7",
        "#6d158d",
        "#52116b",
        "#380b49",
      ],
      "hue": 314.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d7",
        "#fc90c5",
        "#e966aa",
        "#d1368f",
        "#a6176d",
        "#811354",
        "#610f3f",
        "#430a2b",
      ],
      "hue": 350.3,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbcb5",
        "#fc978d",
        "#f5665e",
        "#de3333",
        "#af181e",
        "#871417",
        "#661011",
        "#460a0a",
      ],
      "hue": 26.3,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebdb",
        "#fdd8b9",
        "#fcc08b",
        "#f89e43",
        "#d7801b",
        "#ac6515",
        "#814b0f",
        "#643a0c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fbf9ed",
        "#f5efcb",
        "#ece0a0",
        "#dfcd6d",
        "#cbb225",
        "#a9941b",
        "#877614",
        "#65580f",
        "#4e440c",
        "#3a3209",
        "#272206",
      ],
      "hue": 98.3,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fbf0",
        "#e0f4d5",
        "#c6e9b2",
        "#a8da8a",
        "#85c25c",
        "#5ea61d",
        "#4a8414",
        "#37630f",
        "#2a4c0c",
        "#1f3909",
        "#132606",
      ],
      "hue": 134.3,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a3eed4",
        "#6de0bc",
        "#27c9a0",
        "#1ea885",
        "#178669",
        "#12644f",
        "#0e4d3c",
        "#0b3a2d",
        "#07271d",
      ],
      "hue": 170.3,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fc",
        "#98ecf7",
        "#56deee",
        "#27c4d4",
        "#1ea3b2",
        "#17828e",
        "#12616a",
        "#0e4b52",
        "#0b383d",
        "#072629",
      ],
      "hue": 206.3,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fafe",
        "#dff0fe",
        "#c3e3fd",
        "#9cd2fc",
        "#60bafb",
        "#1d9ce7",
        "#177cb9",
        "#115d8b",
        "#0e486c",
        "#0b3551",
        "#072437",
      ],
      "hue": 242.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.22:1, Lc 83",
    "9: 12.00:1, Lc 92",
    "10: 15.08:1, Lc 98",
  ],
  "warnings": [],
}
`;

exports[`golden palettes > blurple, harmonize 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d8ddfd",
        "#c2c9fc",
        "#a4adfb",
        "#838afa",
        "#6563f1",
        "#4d37e2",
        "#3d1cc2",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f7e9fe",
        "#f0d6fd",
        "#e7bdfc",
        "#da99f9",
        "#c274e6",
        "#a94bd1",
        "#8d19b7",
        "#6d158d",
        "#52116b",
        "#380b49",
      ],
      "hue": 314.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d7",
        "#fc90c5",
        "#e966aa",
        "#d1368f",
        "#a6176d",
        "#811354",
        "#610f3f",
        "#430a2b",
      ],
      "hue": 350.3,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbcb5",
        "#fc978d",
        "#f5665e",
        "#de3333",
        "#af181e",
        "#871417",
        "#661011",
        "#460a0a",
      ],
      "hue": 26.3,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebdb",
        "#fdd8b9",
        "#fcc08b",
        "#f89e43",
        "#d7801b",
        "#ac6515",
        "#814b0f",
        "#643a0c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fbf9ed",
        "#f5efcb",
        "#ece0a0",
        "#dfcd6d",
        "#cbb225",
        "#a9941b",
        "#877614",
        "#65580f",
        "#4e440c",
        "#3a3209",
        "#272206",
      ],
      "hue": 98.3,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fbf0",
        "#e0f4d5",
        "#c6e9b2",
        "#a8da8a",
        "#85c25c",
        "#5ea61d",
        "#4a8414",
        "#37630f",
        "#2a4c0c",
        "#1f3909",
        "#132606",
      ],
      "hue": 134.3,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a3eed4",
        "#6de0bc",
        "#27c9a0",
        "#1ea885",
        "#178669",
        "#12644f",
        "#0e4d3c",
        "#0b3a2d",
        "#07271d",
      ],
      "hue": 170.3,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fc",
        "#98ecf7",
        "#56deee",
        "#27c4d4",
        "#1ea3b2",
        "#17828e",
        "#12616a",
        "#0e4b52",
        "#0b383d",
        "#072629",
      ],
      "hue": 206.3,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fafe",
        "#dff0fe",
        "#c3e3fd",
        "#9cd2fc",
        "#60bafb",
        "#1d9ce7",
        "#177cb9",
        "#115d8b",
        "#0e486c",
        "#0b3551",
        "#072437",
      ],
      "hue": 242.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.22:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.08:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > fifteen steps, vivid, drifted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f6",
        "#ffeeeb",
        "#ffe1de",
        "#fed2cf",
        "#fec0bd",
        "#fea7a6",
        "#fe868a",
        "#fd5c6e",
        "#f91252",
        "#ce0f47",
        "#a90d3d",
        "#8d0c34",
        "#750a2d",
        "#5e0825",
        "#48051c",
      ],
      "hue": 17.6,
      "name": "rose",
      "seed": {
        "input": "#e11d48",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 575,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f1",
        "#ffefe1",
        "#ffe3cd",
        "#fed5b5",
        "#fec397",
        "#feac6f",
        "#fe8c2d",
        "#e6760e",
        "#c8630b",
        "#a75009",
        "#8a3f08",
        "#753307",
        "#622906",
        "#501f04",
        "#3d1503",
      ],
      "hue": 53.6,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fcf9e9",
        "#f9f2cd",
        "#f7e8ab",
        "#f3dc81",
        "#efcd4d",
        "#e3ba15",
        "#cda511",
        "#b5900e",
        "#9d7a0b",
        "#836409",
        "#6c5107",
        "#5b4306",
        "#4c3606",
        "#3d2a04",
        "#2e1f03",
      ],
      "hue": 89.6,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f2fcee",
        "#e3f8d7",
        "#d1f2bb",
        "#bee999",
        "#abde73",
        "#98cf42",
        "#87b911",
        "#79a20d",
        "#6b890b",
        "#5a7109",
        "#4b5b07",
        "#3f4c06",
        "#353e05",
        "#2b3104",
        "#202403",
      ],
      "hue": 125.6,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#ebfdf6",
        "#d0fbea",
        "#b0f7db",
        "#87f0c8",
        "#52e7b3",
        "#18d89d",
        "#14c188",
        "#10a974",
        "#0d9160",
        "#0b784c",
        "#09623b",
        "#08512e",
        "#074324",
        "#05351a",
        "#042811",
      ],
      "hue": 161.6,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#eafcff",
        "#cef9ff",
        "#a4f5fe",
        "#6eeffa",
        "#1be4f1",
        "#18d2db",
        "#14bcc2",
        "#10a5a8",
        "#0d8d8f",
        "#0b7575",
        "#095f5e",
        "#084f4d",
        "#07413f",
        "#053431",
        "#042624",
      ],
      "hue": 197.6,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f3faff",
        "#e5f3ff",
        "#d2ebff",
        "#bae2fe",
        "#9ad6fe",
        "#6cc8fe",
        "#14b5f9",
        "#109fd8",
        "#0d88b7",
        "#0b7196",
        "#095c79",
        "#084c64",
        "#073f52",
        "#053240",
        "#042530",
      ],
      "hue": 233.6,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f7f8ff",
        "#eef1ff",
        "#e2e7ff",
        "#d3dbfe",
        "#c1cdfe",
        "#aabcfe",
        "#8da6fd",
        "#6f8efd",
        "#4f74fc",
        "#2e55fb",
        "#122ff9",
        "#0332c1",
        "#04318f",
        "#04296b",
        "#031f4e",
      ],
      "hue": 269.6,
      "name": "indigo",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fcf7ff",
        "#f9eeff",
        "#f4e2ff",
        "#edd3fe",
        "#e4c2fe",
        "#d8adfe",
        "#ca91fd",
        "#ba73fd",
        "#aa4ffd",
        "#9913f8",
        "#7b11cf",
        "#640faf",
        "#510d94",
        "#3f0b79",
        "#2e085e",
      ],
      "hue": 305.6,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7fa",
        "#ffedf4",
        "#ffe0ee",
        "#fed0e7",
        "#febcdf",
        "#fea1d7",
        "#fe7ccf",
        "#f652c6",
        "#e421b8",
        "#c00f9e",
        "#9c0d84",
        "#820c71",
        "#6c0a60",
        "#56084e",
        "#41053c",
      ],
      "hue": 341.6,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fef7f7",
        "#fbeeee",
        "#f2e5e5",
        "#e6dada",
        "#d9cccc",
        "#c8bbbb",
        "#b3a7a7",
        "#9e9292",
        "#887c7c",
        "#716666",
        "#5d5252",
        "#4e4444",
        "#413838",
        "#352b2b",
        "#281f1f",
      ],
      "hue": 17.6,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: rose",
    "warning: orange",
    "success: emerald",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.06:1, Lc 0",
    "2: 1.16:1, Lc 0",
    "3: 1.29:1, Lc 9",
    "4: 1.47:1, Lc 15",
    "5: 1.75:1, Lc 23",
    "6: 2.20:1, Lc 34",
    "7: 2.85:1, Lc 44",
    "8: 3.78:1, Lc 54",
    "9: 5.21:1, Lc 65",
    "10: 7.04:1, Lc 74",
    "11: 8.83:1, Lc 82",
    "12: 10.75:1, Lc 88",
    "13: 12.88:1, Lc 94",
    "14: 15.12:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > five steps, muted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f1fbf9",
        "#9fe3d7",
        "#5da095",
        "#30544e",
        "#152522",
      ],
      "hue": 182.5,
      "name": "teal",
      "seed": {
        "input": "#14b8a6",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 500,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f4fafc",
        "#acdeed",
        "#5d9eb0",
        "#30525c",
        "#152428",
      ],
      "hue": 218.5,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f7f9fc",
        "#c6d8ee",
        "#6597d5",
        "#2e4f77",
        "#142235",
      ],
      "hue": 254.5,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f9f8fc",
        "#d6d3ee",
        "#978bd7",
        "#533d97",
        "#241b43",
      ],
      "hue": 290.5,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf7fc",
        "#efcbef",
        "#c17dc2",
        "#713773",
        "#321832",
      ],
      "hue": 326.5,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f9",
        "#efced5",
        "#d87793",
        "#7c364c",
        "#371821",
      ],
      "hue": 2.5,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f7",
        "#efcfc5",
        "#d97b5e",
        "#743f2e",
        "#331b14",
      ],
      "hue": 38.5,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f3",
        "#eed2ac",
        "#b58e58",
        "#5f4a2d",
        "#292013",
      ],
      "hue": 74.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f9f9f1",
        "#d7daa4",
        "#969958",
        "#4e4f2d",
        "#222313",
      ],
      "hue": 110.5,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f4fbf4",
        "#b6e1b9",
        "#5ca464",
        "#2f5633",
        "#142516",
      ],
      "hue": 146.5,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#effbf9",
        "#ccd9d6",
        "#8b9795",
        "#454f4d",
        "#1a2322",
      ],
      "hue": 182.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: orange",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.37:1, Lc 12",
    "2: 2.84:1, Lc 44",
    "3: 7.93:1, Lc 79",
    "4: 15.06:1, Lc 99",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > mid grey, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "500: 2.712 < 3",
        "600: 3.9494 < 4.5",
        "700: 6.5847 < 7",
      ],
      "firstOnWhite": {
        "aa": 700,
        "aaLarge": 600,
        "aaa": 800,
      },
      "hexes": [
        "#f9f9f9",
        "#f2f2f2",
        "#e6e6e6",
        "#d5d5d5",
        "#bcbcbc",
        "#9d9d9d",
        "#808080 (seed)",
        "#5d5d5d",
        "#4a4a4a",
        "#363636",
        "#222222",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#808080",
        "magnitude": "noticeable",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 8",
    "3: 1.53:1, Lc 16",
    "4: 2.01:1, Lc 29",
    "5: 2.88:1, Lc 44",
    "6: 4.31:1, Lc 59",
    "7: 6.76:1, Lc 73",
    "8: 9.25:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "GUARANTEE_NOT_MET",
    "NO_HUE",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > out of gamut input 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f2fbf1",
        "#dbf5d8",
        "#bdebb9",
        "#9adc95",
        "#72c56b",
        "#40a93b",
        "#178914",
        "#11670f",
        "#0e4f0c",
        "#0b3b09",
        "#072806",
      ],
      "hue": 142.5,
      "name": "green",
      "seed": {
        "input": "#00ff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 200,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf8",
        "#ccf7ec",
        "#9eeedc",
        "#62e0c8",
        "#27c8ae",
        "#1ea791",
        "#178573",
        "#126356",
        "#0f4d42",
        "#0b3931",
        "#072621",
      ],
      "hue": 178.5,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefbfe",
        "#cff4fe",
        "#9febfd",
        "#5cdcf8",
        "#27c2e0",
        "#1ea2bb",
        "#178195",
        "#126170",
        "#0e4b56",
        "#0b3841",
        "#07252c",
      ],
      "hue": 214.5,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e2effe",
        "#c9e2fd",
        "#a7d0fc",
        "#75b7fb",
        "#2a98fa",
        "#1679cc",
        "#115a9a",
        "#0d4677",
        "#0a345a",
        "#06233d",
      ],
      "hue": 250.5,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f8f8fe",
        "#edecfe",
        "#dddcfd",
        "#c9c7fc",
        "#afa9fb",
        "#9385fa",
        "#785eee",
        "#612ede",
        "#4c1ab7",
        "#39158a",
        "#250e60",
      ],
      "hue": 286.5,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fe",
        "#fbe8fe",
        "#f8d3fd",
        "#f4b7fc",
        "#e496ef",
        "#cd70db",
        "#b446c4",
        "#9518a6",
        "#731480",
        "#571061",
        "#3b0a42",
      ],
      "hue": 322.5,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee9ef",
        "#fdd4e0",
        "#fdbacf",
        "#fc92b7",
        "#ee659a",
        "#d6327d",
        "#a9175e",
        "#831348",
        "#630f36",
        "#440a24",
      ],
      "hue": 358.5,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae5",
        "#fdd7cd",
        "#fdbdad",
        "#fc9880",
        "#f46949",
        "#d83e15",
        "#a32e10",
        "#7f230d",
        "#601a0a",
        "#421106",
      ],
      "hue": 34.5,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b0",
        "#fcc179",
        "#f0a235",
        "#cc861b",
        "#a36a15",
        "#7a4f0f",
        "#5e3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f1f0cc",
        "#e4e2a2",
        "#d4d071",
        "#bdb62e",
        "#9e981b",
        "#7e7914",
        "#5e5a0f",
        "#48460c",
        "#363409",
        "#242306",
      ],
      "hue": 106.5,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fbf2",
        "#e8f0e7",
        "#d9e1d9",
        "#c7cec6",
        "#adb4ac",
        "#8f968f",
        "#717870",
        "#545a53",
        "#3f463f",
        "#2e342e",
        "#1e231d",
      ],
      "hue": 142.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.28:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "warnings": [
    "SEED_CLIPPED",
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > pure blue 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e6eefe",
        "#d1e0fd",
        "#b5cdfc",
        "#8eb2fb",
        "#6291fa",
        "#376df1",
        "#0f45e2",
        "#0531ba",
        "#04258c",
        "#031961",
      ],
      "hue": 264.1,
      "name": "blue",
      "seed": {
        "input": "#0000ff",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 800,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f1ebfe",
        "#e5dafd",
        "#d6c3fc",
        "#c3a3fb",
        "#ac7cf6",
        "#9255e3",
        "#7b1fd2",
        "#5f18a4",
        "#47137c",
        "#300d55",
      ],
      "hue": 300.1,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fc",
        "#fee8f7",
        "#fdd3f1",
        "#fdb6eb",
        "#f391dc",
        "#dd6bc5",
        "#c43eac",
        "#9f178a",
        "#7b136a",
        "#5d0f50",
        "#400a36",
      ],
      "hue": 336.1,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc94a2",
        "#f4647e",
        "#dc305c",
        "#ac1743",
        "#861333",
        "#650f26",
        "#450a19",
      ],
      "hue": 12.1,
      "name": "rose",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f4",
        "#feeae0",
        "#fdd7c4",
        "#fdbe9f",
        "#fc9a65",
        "#ed701b",
        "#be5915",
        "#8f4210",
        "#6f330d",
        "#54260a",
        "#391906",
      ],
      "hue": 48,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ed",
        "#fdeccb",
        "#f9dba0",
        "#f1c66d",
        "#e0aa25",
        "#bb8d1b",
        "#957014",
        "#70540f",
        "#56400c",
        "#413009",
        "#2c2006",
      ],
      "hue": 84,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7faee",
        "#e8f2cf",
        "#d6e6a8",
        "#c0d57b",
        "#a4bd43",
        "#879e1a",
        "#6b7e14",
        "#505e0f",
        "#3d490c",
        "#2d3609",
        "#1e2406",
      ],
      "hue": 120,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f0fcf4",
        "#d4f6df",
        "#afedc5",
        "#84dfa7",
        "#4bc884",
        "#1ea967",
        "#178752",
        "#12653c",
        "#0e4e2e",
        "#0b3a22",
        "#072716",
      ],
      "hue": 156.1,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfb",
        "#c9f7f4",
        "#99eeea",
        "#56e0db",
        "#27c6c2",
        "#1ea5a2",
        "#178481",
        "#126260",
        "#0f4c4a",
        "#0b3937",
        "#072625",
      ],
      "hue": 192.1,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f1fafe",
        "#d9f2fe",
        "#b5e6fd",
        "#82d7fc",
        "#27c0f5",
        "#1ea0cd",
        "#177fa4",
        "#125f7b",
        "#0e495f",
        "#0b3747",
        "#072530",
      ],
      "hue": 228.1,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e9eef8",
        "#dadfe9",
        "#c7ccd6",
        "#aeb2bc",
        "#90959e",
        "#72767f",
        "#545860",
        "#40444c",
        "#2f333a",
        "#1e2229",
      ],
      "hue": 264.1,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: rose",
    "warning: yellow",
    "success: emerald",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.28:1, Lc 59",
    "7: 6.70:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.95:1, Lc 92",
    "10: 15.07:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > pure yellow 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9faee",
        "#eff0cd",
        "#e1e3a3",
        "#cfd173",
        "#b7b833",
        "#99991a",
        "#7a7a14",
        "#5b5b0f",
        "#46460c",
        "#343409",
        "#232306",
      ],
      "hue": 109.8,
      "name": "lime",
      "seed": {
        "input": "#ffff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 50,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f2fbf2",
        "#d9f5da",
        "#baebbb",
        "#95dd99",
        "#69c671",
        "#30aa44",
        "#17882f",
        "#116622",
        "#0e4f1a",
        "#0b3b13",
        "#07280b",
      ],
      "hue": 145.8,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf9",
        "#cbf7ee",
        "#9ceedf",
        "#5ee0cd",
        "#27c7b3",
        "#1ea695",
        "#178477",
        "#126359",
        "#0f4c44",
        "#0b3933",
        "#072622",
      ],
      "hue": 181.8,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#effbfe",
        "#d2f4fe",
        "#a6e9fd",
        "#5fdbfc",
        "#27c2e4",
        "#1ea2bf",
        "#178199",
        "#126072",
        "#0e4a58",
        "#0b3742",
        "#07252d",
      ],
      "hue": 217.8,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e3effe",
        "#cbe1fd",
        "#aacffc",
        "#7cb6fb",
        "#3d96fa",
        "#1576d7",
        "#1059a2",
        "#0d447e",
        "#0a335f",
        "#062241",
      ],
      "hue": 253.8,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f8fe",
        "#eeecfe",
        "#dfdcfd",
        "#ccc6fc",
        "#b4a8fb",
        "#9983fa",
        "#7f5cec",
        "#682bdc",
        "#521ab3",
        "#3d1587",
        "#280e5d",
      ],
      "hue": 289.8,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef6fe",
        "#fee7fe",
        "#fdd1fd",
        "#f9b5fb",
        "#e895eb",
        "#d16fd6",
        "#b944bf",
        "#98189f",
        "#76147b",
        "#59105c",
        "#3d0a3f",
      ],
      "hue": 325.8,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee9ee",
        "#fdd5df",
        "#fdbacb",
        "#fc93b1",
        "#f06493",
        "#d83175",
        "#aa1757",
        "#841343",
        "#630f32",
        "#440a21",
      ],
      "hue": 1.8,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae4",
        "#fdd7cb",
        "#fdbdaa",
        "#fc987a",
        "#f36b40",
        "#d14715",
        "#9d3510",
        "#7a290d",
        "#5c1e0a",
        "#3f1406",
      ],
      "hue": 37.8,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd4",
        "#fdd9ab",
        "#fcc272",
        "#eca430",
        "#c8881b",
        "#9f6c15",
        "#78500f",
        "#5d3e0c",
        "#452e09",
        "#2f1e06",
      ],
      "hue": 73.8,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9faef",
        "#eeefe4",
        "#dfe0d5",
        "#cccdc2",
        "#b2b3a9",
        "#95958c",
        "#76776e",
        "#585950",
        "#44443c",
        "#33332b",
        "#22221a",
      ],
      "hue": 109.8,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: orange",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.19:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.07:1, Lc 98",
  ],
  "warnings": [
    "SEED_AT_RAMP_END",
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > sixteen families 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e5effe",
        "#cee0fd",
        "#b1cefc",
        "#87b3fb",
        "#5593fa",
        "#1e70f0",
        "#0e53ba",
        "#0b4091",
        "#09306d",
        "#05204b",
      ],
      "hue": 259.8,
      "name": "blue",
      "seed": {
        "input": "#3b82f6",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 500,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f8f8fe",
        "#ebedfe",
        "#daddfd",
        "#c5c8fc",
        "#a9abfb",
        "#8b87fa",
        "#6f61f0",
        "#5733e1",
        "#451bbd",
        "#33168f",
        "#210f63",
      ],
      "hue": 282.3,
      "name": "indigo",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f3ebfe",
        "#e8d8fd",
        "#dbc1fc",
        "#caa0fb",
        "#b479f1",
        "#9a52dd",
        "#821bca",
        "#64179d",
        "#4b1276",
        "#330c51",
      ],
      "hue": 304.8,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef6fe",
        "#fee7fd",
        "#fdd1fc",
        "#fab5f9",
        "#ea94e9",
        "#d36ed3",
        "#ba43bc",
        "#99189c",
        "#761478",
        "#59105b",
        "#3d0a3e",
      ],
      "hue": 327.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d8",
        "#fc90c5",
        "#e966ab",
        "#d13690",
        "#a6176e",
        "#801355",
        "#610f40",
        "#430a2b",
      ],
      "hue": 349.8,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc95a1",
        "#f4647d",
        "#dc305c",
        "#ac1742",
        "#861333",
        "#650f25",
        "#450a18",
      ],
      "hue": 12.3,
      "name": "rose",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae4",
        "#fdd7cd",
        "#fdbdad",
        "#fc987f",
        "#f46948",
        "#d83f15",
        "#a32f10",
        "#7e240d",
        "#5f1b0a",
        "#411106",
      ],
      "hue": 34.8,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeadd",
        "#fdd8be",
        "#fcbf93",
        "#fc9b4c",
        "#de7b1b",
        "#b16215",
        "#864910",
        "#67380d",
        "#4e2909",
        "#351b06",
      ],
      "hue": 57.3,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ee",
        "#feeccf",
        "#fddaa1",
        "#f6c46f",
        "#e5a729",
        "#c08b1b",
        "#996f14",
        "#73520f",
        "#593f0c",
        "#432f09",
        "#2d1f06",
      ],
      "hue": 79.8,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f3efcc",
        "#e8e1a1",
        "#dace6f",
        "#c4b429",
        "#a4961b",
        "#837714",
        "#62590f",
        "#4b450c",
        "#383309",
        "#262206",
      ],
      "hue": 102.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6faef",
        "#e5f3d1",
        "#d0e7ab",
        "#b8d780",
        "#9abf4c",
        "#7ca11a",
        "#628014",
        "#49600f",
        "#384a0c",
        "#293709",
        "#1b2506",
      ],
      "hue": 124.8,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f1fbf2",
        "#d8f5db",
        "#b8ecbd",
        "#92dd9b",
        "#65c674",
        "#26aa48",
        "#178836",
        "#116628",
        "#0e4f1e",
        "#0b3b16",
        "#07280d",
      ],
      "hue": 147.3,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a4eed3",
        "#6ee0bb",
        "#27c99f",
        "#1ea884",
        "#178669",
        "#12644e",
        "#0e4d3c",
        "#0b3a2c",
        "#07271d",
      ],
      "hue": 169.8,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfb",
        "#c9f7f4",
        "#99eeea",
        "#56e0dc",
        "#27c6c2",
        "#1ea5a2",
        "#178381",
        "#126260",
        "#0f4c4a",
        "#0b3937",
        "#072625",
      ],
      "hue": 192.3,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefbfe",
        "#cff4fe",
        "#a0eafd",
        "#5cdcf8",
        "#27c2e0",
        "#1ea2bb",
        "#178196",
        "#126170",
        "#0e4b57",
        "#0b3841",
        "#07252c",
      ],
      "hue": 214.8,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fafe",
        "#ddf1fe",
        "#bfe4fd",
        "#95d4fc",
        "#4dbcfb",
        "#1e9edd",
        "#177eb0",
        "#115e85",
        "#0e4867",
        "#0b364d",
        "#072434",
      ],
      "hue": 237.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e8eef8",
        "#dadfe9",
        "#c7ccd5",
        "#adb3bb",
        "#90959d",
        "#71767f",
        "#545960",
        "#40444c",
        "#2e333a",
        "#1e2228",
      ],
      "hue": 259.8,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: yellow",
    "success: green",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.85:1, Lc 43",
    "6: 4.27:1, Lc 59",
    "7: 6.66:1, Lc 73",
    "8: 9.19:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.03:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > three families only 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf9",
        "#cbf7ee",
        "#9ceee0",
        "#5ee0ce",
        "#27c7b4",
        "#1ea696",
        "#178477",
        "#126359",
        "#0f4c45",
        "#0b3933",
        "#072622",
      ],
      "hue": 182.5,
      "name": "teal",
      "seed": {
        "input": "#14b8a6",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 400,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f2ebfe",
        "#e7d9fd",
        "#d9c2fc",
        "#c6a1fb",
        "#b07bf3",
        "#9753e0",
        "#7f1cce",
        "#6217a0",
        "#491279",
        "#310c53",
      ],
      "hue": 302.5,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebda",
        "#fdd8b9",
        "#fcc08a",
        "#f79e42",
        "#d6801b",
        "#ab6515",
        "#814c0f",
        "#643a0c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#effbf9",
        "#e4f1ee",
        "#d5e2df",
        "#c2cfcc",
        "#a9b5b2",
        "#8b9795",
        "#6d7976",
        "#505b58",
        "#3c4644",
        "#2b3533",
        "#1a2322",
      ],
      "hue": 182.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: amber",
    "warning: amber",
    "success: teal",
    "info: teal",
  ],
  "stepDistanceGuarantees": [
    "1: 1.09:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 17",
    "4: 2.00:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.66:1, Lc 73",
    "8: 9.22:1, Lc 84",
    "9: 11.95:1, Lc 92",
    "10: 15.17:1, Lc 99",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > two seeds 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d8ddfd",
        "#c2c9fc",
        "#a4adfb",
        "#838afa",
        "#6563f1",
        "#4d37e2",
        "#3d1cc2",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f8e9fe",
        "#f2d5fd",
        "#eabbfc",
        "#dd98f7",
        "#c573e3",
        "#ac4ace",
        "#8f19b3",
        "#6f158a",
        "#531168",
        "#390b48",
      ],
      "hue": 316.2,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee8f0",
        "#fdd4e3",
        "#fdb9d3",
        "#fc91be",
        "#ec65a3",
        "#d43486",
        "#a71766",
        "#82134f",
        "#620f3b",
        "#430a27",
      ],
      "hue": 354.2,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#feeae5",
        "#fdd6ce",
        "#fdbdb0",
        "#fc9783",
        "#f4684f",
        "#dd3619",
        "#a82710",
        "#821e0d",
        "#63170a",
        "#440f06",
      ],
      "hue": 32.1,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b0",
        "#fcc17b",
        "#f0a236",
        "#cc851b",
        "#a36a15",
        "#7b4f0f",
        "#5f3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70.1,
      "name": "amber",
      "seed": {
        "input": "#f59e0b",
        "magnitude": "subtle",
        "mode": "harmonize",
        "slot": 400,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f2f0cc",
        "#e6e2a1",
        "#d7cf70",
        "#c0b52c",
        "#a1971b",
        "#807814",
        "#605a0f",
        "#4a450c",
        "#373409",
        "#252206",
      ],
      "hue": 104.8,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fbf1",
        "#ddf5d7",
        "#c0eab6",
        "#a0db91",
        "#79c466",
        "#4ca831",
        "#328714",
        "#25650f",
        "#1c4e0c",
        "#153a09",
        "#0d2706",
      ],
      "hue": 139.5,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf7",
        "#cdf7ea",
        "#a1eed8",
        "#68e0c2",
        "#27c8a7",
        "#1ea78b",
        "#17856e",
        "#126452",
        "#0e4d3f",
        "#0b392f",
        "#07271f",
      ],
      "hue": 174.2,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fd",
        "#99ecfa",
        "#57ddf1",
        "#27c3d8",
        "#1ea3b4",
        "#178290",
        "#12616c",
        "#0e4b53",
        "#0b383e",
        "#07252a",
      ],
      "hue": 208.9,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4f9fe",
        "#e0f0fe",
        "#c4e3fd",
        "#9ed2fc",
        "#64bafb",
        "#1d9bea",
        "#177cbb",
        "#115d8d",
        "#0e476d",
        "#0b3552",
        "#072438",
      ],
      "hue": 243.6,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.67:1, Lc 73",
    "8: 9.22:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.04:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > white, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "500: 2.9953 < 3",
      ],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 600,
        "aaa": 700,
      },
      "hexes": [
        "#ffffff (seed)",
        "#f3f3f3",
        "#e4e4e4",
        "#d0d0d0",
        "#b6b6b6",
        "#959595",
        "#767676",
        "#595959",
        "#454545",
        "#333333",
        "#222222",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#ffffff",
        "magnitude": "subtle",
        "mode": "exact",
        "slot": 50,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 8",
    "3: 1.53:1, Lc 16",
    "4: 2.01:1, Lc 29",
    "5: 2.88:1, Lc 44",
    "6: 4.31:1, Lc 59",
    "7: 6.76:1, Lc 73",
    "8: 9.25:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "GUARANTEE_NOT_MET",
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;
